src/test/deca/context/valid/provided/Classtest.deca
class A {
protected int x = 2;
void getX(int y){
}
}
