src/test/deca/context/invalid/provided/testi30.deca
class A{
    protected boolean b;
}
class B{
    void setB(int b){
        this.b = b;
    }
}